--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 <a href="https://hackliberty.org/register" class="btn btn-default btn-lg">Matrix</a>
 <a href="https://element.hackliberty.org/" class="btn btn-default btn-lg">Element</a>
 <a href="https://chat.hackliberty.org/" class="btn btn-default btn-lg">SchildiChat</a>
+<a href="https://cinny.hackliberty.org/" class="btn btn-default btn-lg">Cinny</a>
 <a href="https://links.hackliberty.org/" class="btn btn-default btn-lg">Lemmy</a>
 <a href="https://paste.hackliberty.org/" class="btn btn-default btn-lg">Privatebin</a>
 <a href="https://ots.hackliberty.org/" class="btn btn-default btn-lg">OTS</a>
