--- a/index.html
+++ b/index.html
@@ -40,9 +40,16 @@
     </li>
     <li class="nav-item">
      <a class="nav-link js-scroll-trigger improve-contrast-box" href="#sec-ind-3">Contact</a>
-    </li><li class="nav-item">
+    </li>
+    <li class="nav-item">
      <a class="nav-link js-scroll-trigger improve-contrast-box" href="https://blog.hackliberty.org">Blog</a>
-    </li></ul>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link js-scroll-trigger improve-contrast-box" href="https://status.hackliberty.org/status/hackliberty">Status</a>
+     </li>
+    <li class="nav-item">
+      <a class="nav-link js-scroll-trigger improve-contrast-box" href="https://hackliberty.org/register">Register</a>
+     </li></ul>
   </div>
  </div>
 </nav>
@@ -75,6 +82,7 @@
 <a href="https://chat.hackliberty.org/" class="btn btn-default btn-lg">SchildiChat</a>
 <a href="https://cinny.hackliberty.org/" class="btn btn-default btn-lg">Cinny</a>
 <a href="https://links.hackliberty.org/" class="btn btn-default btn-lg">Lemmy</a>
+<a href="https://write.hackliberty.org/" class="btn btn-default btn-lg">WriteFreely</a>
 <a href="https://paste.hackliberty.org/" class="btn btn-default btn-lg">Privatebin</a>
 <a href="https://ots.hackliberty.org/" class="btn btn-default btn-lg">OTS</a>
 <a href="https://docs.hackliberty.org/" class="btn btn-default btn-lg">Bookstack</a>
@@ -95,7 +103,7 @@
 
 <footer>
   <div class="container text-center">
-    <iframe src="https://trocador.app/anonpay/?ticker_to=xmr&network_to=Mainnet&address=881ayjjExYVhyqQBQFxdY6aQC5J5Ys3JNfvxC1r5WNwSVK3ysD4Sn6GfUbNf1JkhMEJWj11mNvzCW9XZLpyWkjHx6EftAXU&donation=True&amount=1.0&name=hackliberty.org&email=noreply@hackliberty.org&ticker_from=xmr&network_from=Mainnet&buttonbgcolor=42DCA3&textcolor=000000" width="310" height="350" style="border:0" scrolling="no"></iframe>      
+    <iframe src="https://trocador.app/anonpay/?ticker_to=xmr&network_to=Mainnet&address=881ayjjExYVhyqQBQFxdY6aQC5J5Ys3JNfvxC1r5WNwSVK3ysD4Sn6GfUbNf1JkhMEJWj11mNvzCW9XZLpyWkjHx6EftAXU&donation=True&amount=1.0&name=hackliberty.org&email=noreply@hackliberty.org&ticker_from=xmr&network_from=Mainnet&buttonbgcolor=42DCA3&textcolor=000000" width="310" height="350" style="border:0" scrolling="no" frameborder="0"></iframe>      
       <p><a href="https://git.hackliberty.org/hackliberty.org/hackliberty.org-legal/src/branch/main/terms-of-service.md">Terms of Service</a> / <a href="https://git.hackliberty.org/hackliberty.org/hackliberty.org-legal/src/branch/main/code-of-conduct.md">Code of Conduct</a> / <a href="https://git.hackliberty.org/hackliberty.org/hackliberty.org-legal/src/branch/main/privacy-policy.md">Privacy Policy</a></p>
   </footer>
 
