add simplex link

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
      <a class="nav-link js-scroll-trigger improve-contrast-box" href="https://blog.hackliberty.org">Blog</a>
     </li>
     <li class="nav-item">
+     <a class="nav-link js-scroll-trigger improve-contrast-box" href="https://forum.hackliberty.org">Forum</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link js-scroll-trigger improve-contrast-box" href="https://status.hackliberty.org/status/hackliberty">Status</a>
      </li>
     <li class="nav-item">
@@ -78,9 +81,10 @@
 <p>All our services use free open source software. We <a href="https://www.supertechcrew.com/anonymizing-logs-nginx-apache/">anonymize logs</a> and use <a href="https://gitlab.com/cryptsetup/cryptsetup">full disk encryption</a> to preserve user privacy. Our hosting provider <a href="https://1984.hosting">1984</a> is located in <a href="https://ctemplar.com/icelandic-privacy-laws/">Iceland</a> and supports human rights and free speech.</p>
 
 <a href="https://hackliberty.org/register" class="btn btn-default btn-lg">Matrix</a>
+<a href="https://simplex.hackliberty.org/" class="btn btn-default btn-lg">Simplex</a>
 <a href="https://element.hackliberty.org/" class="btn btn-default btn-lg">Element</a>
 <a href="https://chat.hackliberty.org/" class="btn btn-default btn-lg">SchildiChat</a>
-<a href="https://cinny.hackliberty.org/" class="btn btn-default btn-lg">Cinny</a>
+<a href="https://forum.hackliberty.org/" class="btn btn-default btn-lg">Forum</a>
 <a href="https://links.hackliberty.org/" class="btn btn-default btn-lg">Lemmy</a>
 <a href="https://write.hackliberty.org/" class="btn btn-default btn-lg">WriteFreely</a>
 <a href="https://paste.hackliberty.org/" class="btn btn-default btn-lg">Privatebin</a>
